--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="container">
         <h1>Feliz Cumpleaños, Celeste! 🎉🎂</h1>
-        <img src="images/bdaycat.jpg" alt="Birthday Celebration">
+        <img src="birthday_image1.jpg" alt="Birthday Celebration">
         <br>
         <a href="page2.html" class="button">Next</a>
     </div>
@@ -79,6 +79,10 @@
             max-width: 600px;
             word-wrap: break-word;
         }
+        .button-container {
+            display: flex;
+            gap: 20px;
+        }
         .button {
             display: inline-block;
             margin-top: 20px;
@@ -93,12 +97,15 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/bdaycat2.jpg" alt="Heartfelt Message">
+        <img src="birthday_image2.jpg" alt="Heartfelt Message">
         <p class="message">Feliz cumpleaños, Cele!! 🎉 Espero que este nuevo año te traiga felicidad, éxito y todo lo que deseas. Espero que puedas tomarte un momento para apreciar lo lejos que has llegado.<br><br>
         Quiero que sepas que eres especial para mí, y admiro tu fuerza y la forma en que sigues adelante sin importar los obstáculos.<br><br>
         Te quiero mucho, Celeste. &lt;3</p>
         <br>
-        <a href="page3.html" class="button">Next</a>
+        <div class="button-container">
+            <a href="index.html" class="button">Back</a>
+            <a href="page3.html" class="button">Next</a>
+        </div>
     </div>
 </body>
 </html>
@@ -130,12 +137,29 @@
             height: auto;
             border-radius: 10px;
         }
+        .button-container {
+            display: flex;
+            gap: 20px;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #66b3ff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 18px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="images/bdaycat3.gif" alt="Celebration">
+        <img src="birthday_image3.jpg" alt="Celebration">
         <h1>Feliz Cumpleaños, Celeste! 🎈🎁</h1>
+        <div class="button-container">
+            <a href="page2.html" class="button">Back</a>
+        </div>
     </div>
 </body>
 </html>
