Updated website with navigation buttons and color changes v2

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="container">
         <h1>Feliz Cumpleaños, Celeste! 🎉🎂</h1>
-        <img src="birthday_image1.jpg" alt="Birthday Celebration">
+        <img src="images/bdaycat.jpg" alt="Birthday Celebration">
         <br>
         <a href="page2.html" class="button">Next</a>
     </div>
@@ -97,7 +97,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="birthday_image2.jpg" alt="Heartfelt Message">
+        <img src="images/bdaycat2.jpg" alt="Heartfelt Message">
         <p class="message">Feliz cumpleaños, Cele!! 🎉 Espero que este nuevo año te traiga felicidad, éxito y todo lo que deseas. Espero que puedas tomarte un momento para apreciar lo lejos que has llegado.<br><br>
         Quiero que sepas que eres especial para mí, y admiro tu fuerza y la forma en que sigues adelante sin importar los obstáculos.<br><br>
         Te quiero mucho, Celeste. &lt;3</p>
@@ -155,7 +155,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="birthday_image3.jpg" alt="Celebration">
+        <img src="images/bdaycat3.gif" alt="Celebration">
         <h1>Feliz Cumpleaños, Celeste! 🎈🎁</h1>
         <div class="button-container">
             <a href="page2.html" class="button">Back</a>
