--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #b3e0ff;
         }
         .container {
-            display: flex;
+            display: none;
             flex-direction: column;
             align-items: center;
             justify-content: center;
@@ -33,133 +33,42 @@
             text-decoration: none;
             border-radius: 5px;
             font-size: 18px;
+            cursor: pointer;
+        }
+        .active {
+            display: flex;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Feliz Cumpleaños, Celeste! 🎉🎂</h1>
+    <div id="page1" class="container active">
+        <h1>Feliz Cumpleaños Celeste! 🎉🎂</h1>
         <img src="images/bdaycat.jpg" alt="Birthday Celebration">
         <br>
-        <a href="page2.html" class="button">Next</a>
+        <button class="button" onclick="showPage(2)">Next</button>
     </div>
-</body>
-</html>
 
-<!-- Page 2 -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Message</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: #b3e0ff;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        img {
-            max-width: 80%;
-            height: auto;
-            border-radius: 10px;
-        }
-        .message {
-            font-size: 20px;
-            margin-top: 20px;
-            max-width: 600px;
-            word-wrap: break-word;
-        }
-        .button-container {
-            display: flex;
-            gap: 20px;
-        }
-        .button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #66b3ff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 18px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
+    <div id="page2" class="container">
         <img src="images/bdaycat2.jpg" alt="Heartfelt Message">
         <p class="message">Feliz cumpleaños, Cele!! 🎉 Espero que este nuevo año te traiga felicidad, éxito y todo lo que deseas. Espero que puedas tomarte un momento para apreciar lo lejos que has llegado.<br><br>
         Quiero que sepas que eres especial para mí, y admiro tu fuerza y la forma en que sigues adelante sin importar los obstáculos.<br><br>
         Te quiero mucho, Celeste. &lt;3</p>
         <br>
-        <div class="button-container">
-            <a href="index.html" class="button">Back</a>
-            <a href="page3.html" class="button">Next</a>
-        </div>
+        <button class="button" onclick="showPage(1)">Back</button>
+        <button class="button" onclick="showPage(3)">Next</button>
     </div>
-</body>
-</html>
 
-<!-- Page 3 -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Birthday Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: #b3e0ff;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        img {
-            max-width: 80%;
-            height: auto;
-            border-radius: 10px;
-        }
-        .button-container {
-            display: flex;
-            gap: 20px;
-        }
-        .button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #66b3ff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 18px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
+    <div id="page3" class="container">
         <img src="images/bdaycat3.gif" alt="Celebration">
         <h1>Feliz Cumpleaños, Celeste! 🎈🎁</h1>
-        <div class="button-container">
-            <a href="page2.html" class="button">Back</a>
-        </div>
+        <button class="button" onclick="showPage(2)">Back</button>
     </div>
+
+    <script>
+        function showPage(pageNumber) {
+            document.querySelectorAll('.container').forEach(page => page.classList.remove('active'));
+            document.getElementById('page' + pageNumber).classList.add('active');
+        }
+    </script>
 </body>
 </html>
