--- a/index.html
+++ b/index.html
@@ -38,18 +38,27 @@
         .active {
             display: flex;
         }
+        .message {
+            margin-top: 20px;
+            font-size: 18px;
+            max-width: 600px;
+        }
+        #page2 img {
+            margin-top: 40px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <div id="page1" class="container active">
-        <h1>Feliz Cumpleaños, Celeste!!! 🎉🎂</h1>
-        <img src="birthday_image1.jpg" alt="Birthday Celebration">
+        <h1>Feliz Cumpleaños Celeste! 🎉🎂</h1>
+        <img src="images/bdaycat.jpg" alt="Birthday Celebration">
         <br>
         <button class="button" onclick="showPage(2)">Next</button>
     </div>
 
     <div id="page2" class="container">
-        <img src="birthday_image2.jpg" alt="Heartfelt Message">
+        <img src="images/bdaycat2.jpg" alt="Heartfelt Message">
         <p class="message">Feliz cumpleaños, Cele!! 🎉 Espero que este nuevo año te traiga felicidad, éxito y todo lo que deseas. Espero que puedas tomarte un momento para apreciar lo lejos que has llegado.<br><br>
         Quiero que sepas que eres especial para mí, y admiro tu fuerza y la forma en que sigues adelante sin importar los obstáculos.<br><br>
         Te quiero mucho, Celeste. &lt;3</p>
@@ -59,7 +68,7 @@
     </div>
 
     <div id="page3" class="container">
-        <img src="birthday_image3.jpg" alt="Celebration">
+        <img src="images/bdaycat3.gif" alt="Celebration">
         <h1>Feliz Cumpleaños, Celeste! 🎈🎁</h1>
         <button class="button" onclick="showPage(2)">Back</button>
     </div>
